log
Sun, Mar 23, 2025  1:22:19 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025 12:05:24 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:16: error: statement with no effect [-Werror=unused-value]
     list->head == NULL;
                ^
list.c:34:16: error: statement with no effect [-Werror=unused-value]
     list->tail == NULL;
                ^
list.c:35:19: error: statement with no effect [-Werror=unused-value]
     list->current == NULL;
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
1d286ec
Thu, Mar 27, 2025 12:06:46 PM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
dc75bca
Thu, Mar 27, 2025 12:30:15 PM: 
 list.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:60:18: error: dereferencing 'void *' pointer [-Werror]
     Nodo->data = *data;
                  ^~~~~
list.c:60:16: error: void value not ignored as it ought to be
     Nodo->data = *data;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
19b6aa1
Thu, Mar 27, 2025 12:30:55 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
572168c
Thu, Mar 27, 2025 12:32:27 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b5f092a
Thu, Mar 27, 2025 12:34:39 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
6dcecef
Thu, Mar 27, 2025 12:36:33 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
60003bb
Thu, Mar 27, 2025 12:37:32 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d82d253
Thu, Mar 27, 2025 12:43:57 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
78b8ada
Thu, Mar 27, 2025 12:45:30 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
43caf3a
Thu, Mar 27, 2025 12:47:14 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f9b43e6
Thu, Mar 27, 2025 12:49:42 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|5
total_score: 15/70
7da7ee9
